--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfolio Process</title>
 
+  <!-- Favicon Link -->
+  <link rel="apple-touch-icon" href="/schedule/images/favicon.png">
+  <link rel="icon" href="/schedule/images/favicon.png">
+
   <!-- Font Awesome Link -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -26,7 +30,7 @@
     <div class="dashboard">
 
       <header>
-        <h2><a href="#">LO</a></h2>
+        <h2><a href="#"><img src="/schedule/images/logo.png" alt=""></a></h2>
         <ul class="gnb">
           <li><a href="#"><i class="fa fa-trello"></i></a></li>
           <li><a href="#"><i class="fa fa-pencil"></i></a></li>
