--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
   <title>Portfolio Process</title>
 
   <!-- Favicon Link -->
-  <link rel="apple-touch-icon" href="/schedule/images/favicon.png">
-  <link rel="icon" href="/schedule/images/favicon.png">
+  <link rel="shortcut icon" href="/schedule/images/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="/schedule/images/favicon.ico" type="image/x-icon">
+  <link rel="apple-touch-icon" href="/schedule/images/favicon.ico">
 
   <!-- Font Awesome Link -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -22,6 +23,9 @@
 
   <!-- Main CSS Link -->
   <link rel="stylesheet" href="/schedule/css/style.css">
+
+  <!-- Animation CSS Link -->
+  <link rel="stylesheet" href="/schedule/css/animation.css">
 </head>
 <body>
   
@@ -40,7 +44,12 @@
       </header>
 
       <section class="graph-ui">
-        <div class="intro"></div>
+        <div class="intro">
+          <h2>Database Project Process</h2>
+          <p>데이터베이스 테이블 설계 완료.<br>테이블 UI 디자인 완료</p>
+          <a href="#">More Details</a>
+          <i class="fa fa-database"></i>
+        </div>
         <div class="each-pofol">
           <div>
             <div class="each-title">
@@ -56,11 +65,46 @@
         </div>
         <div class="total-pofol"></div>
       </section>
-      <section class="table-ui"></section>
+      <section class="table-ui">
+        <div class="new-update">
+          <div class="tit-box">
+            <p>Recent Update</p>
+            <a href="#">More</a>
+          </div>
+          <ul class="con-details">
+            <li>
+              <i class="fa fa-database"></i>
+              <div class="con-txt">
+                <p><a href="#">데이터베이스 테이블 설계 완료</a></p>
+                <em>2021-05-31</em>
+              </div>
+            </li>
+          </ul>
+        </div>
+        <div class="each-contents">
+          <div class="each-btns">
+            <button class="active">Database</button>
+            <button>API</button>
+            <button>Renewal</button>
+            <button>Planning</button>
+          </div>
+          <ul class="con-details">
+            <li>
+              <i class="fa fa-database"></i>
+              <div class="con-txt">
+                <p><a href="#">데이터베이스 테이블 설계 완</a></p>
+                <em>2021-05-31</em>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </section>
 
     </div>
     <!-- End of Main Dashboard Frame -->
   </div>
+
+  <script src="js/index.js"></script>
 
 </body>
 </html>
