--- a/index.html
+++ b/index.html
@@ -21,11 +21,18 @@
   <!-- Reset CSS Link -->
   <link rel="stylesheet" href="/schedule/css/reset.css">
 
+  <!-- Plugin CSS Link -->
+  <link rel="stylesheet" href="/schedule/lib/css/lightslider.css">
+  <link rel="stylesheet" href="/schedule/lib/css/piechart.css">
+
   <!-- Main CSS Link -->
   <link rel="stylesheet" href="/schedule/css/style.css">
 
   <!-- Animation CSS Link -->
   <link rel="stylesheet" href="/schedule/css/animation.css">
+
+  <!-- Media Query CSS Link -->
+  <link rel="stylesheet" href="/schedule/css/Media.css">
 </head>
 <body>
   
@@ -34,21 +41,46 @@
     <div class="dashboard">
 
       <header>
-        <h2><a href="#"><img src="/schedule/images/logo.png" alt=""></a></h2>
+        <h2><a href="#"><i class="custom-font"></i></a></h2>
         <ul class="gnb">
           <li><a href="#"><i class="fa fa-trello"></i></a></li>
           <li><a href="#"><i class="fa fa-pencil"></i></a></li>
           <li><a href="#"><i class="fa fa-search"></i></a></li>
         </ul>
         <a href="#" class="sign-out"><i class="fa fa-sign-out"></i></a>
+
+        <div class="mobile-menu">
+          <span></span>
+          <span></span>
+        </div>
       </header>
 
       <section class="graph-ui">
         <div class="intro">
-          <h2>Database Project Process</h2>
-          <p>데이터베이스 테이블 설계 완료.<br>테이블 UI 디자인 완료</p>
-          <a href="#">More Details</a>
-          <i class="fa fa-database"></i>
+          <div class="slide-box">
+            <h2>Database Project Process</h2>
+            <p>데이터베이스 테이블 설계 완료.<br>테이블 UI 디자인 완료</p>
+            <a href="#">More Details</a>
+            <i class="fa fa-database"></i>
+          </div>
+          <div class="slide-box">
+            <h2>Database Project Process</h2>
+            <p>API 테이블 설계 완료.<br>테이블 UI 디자인 완료</p>
+            <a href="#">More Details</a>
+            <i class="fa fa-database"></i>
+          </div>
+          <div class="slide-box">
+            <h2>Database Project Process</h2>
+            <p>리뉴얼 테이블 설계 완료.<br>테이블 UI 디자인 완료</p>
+            <a href="#">More Details</a>
+            <i class="fa fa-database"></i>
+          </div>
+          <div class="slide-box">
+            <h2>Database Project Process</h2>
+            <p>기획 테이블 설계 완료.<br>테이블 UI 디자인 완료</p>
+            <a href="#">More Details</a>
+            <i class="fa fa-database"></i>
+          </div>             
         </div>
         <div class="each-pofol">
           <div>
@@ -56,10 +88,26 @@
               <h3>Each Portfolio Process Rate</h3>
             </div>
             <div class="each-graph">
-              <div class="db-pofol"></div>
-              <div class="api-pofol"></div>
-              <div class="renewal-pofol"></div>
-              <div class="planning-pofol"></div>
+              <div class="db-pofol">
+                <span class="chart" data-percent="86">
+                  <span class="percent"></span>
+                </span>
+              </div>
+              <div class="api-pofol">
+                <span class="chart" data-percent="50">
+                  <span class="percent"></span>
+                </span>
+              </div>
+              <div class="renewal-pofol">
+                <span class="chart" data-percent="45">
+                  <span class="percent"></span>
+                </span>
+              </div>
+              <div class="planning-pofol">
+                <span class="chart" data-percent="30">
+                  <span class="percent"></span>
+                </span>
+              </div>
             </div>
           </div>
         </div>
@@ -72,6 +120,20 @@
             <a href="#">More</a>
           </div>
           <ul class="con-details">
+            <li>
+              <i class="fa fa-database"></i>
+              <div class="con-txt">
+                <p><a href="#">데이터베이스 테이블 설계 완료</a></p>
+                <em>2021-05-31</em>
+              </div>
+            </li>
+            <li>
+              <i class="fa fa-database"></i>
+              <div class="con-txt">
+                <p><a href="#">데이터베이스 테이블 설계 완료</a></p>
+                <em>2021-05-31</em>
+              </div>
+            </li>
             <li>
               <i class="fa fa-database"></i>
               <div class="con-txt">
@@ -96,6 +158,20 @@
                 <em>2021-05-31</em>
               </div>
             </li>
+            <li>
+              <i class="fa fa-database"></i>
+              <div class="con-txt">
+                <p><a href="#">데이터베이스 테이블 설계 완료</a></p>
+                <em>2021-05-31</em>
+              </div>
+            </li>
+            <li>
+              <i class="fa fa-database"></i>
+              <div class="con-txt">
+                <p><a href="#">데이터베이스 테이블 설계 완료</a></p>
+                <em>2021-05-31</em>
+              </div>
+            </li>
           </ul>
         </div>
       </section>
@@ -104,7 +180,82 @@
     <!-- End of Main Dashboard Frame -->
   </div>
 
-  <script src="js/index.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="/schedule/lib/js/lightslider.js"></script>
+  <script src="/schedule/lib/js/easypiechart.js"></script>
+  <script src="/schedule/js/index.js"></script>
+  <script type="text/javascript">
+    $(document).ready(function() {
+      $(".intro").lightSlider({
+        item:1,
+        pager:false,
+        loop: true,
+        slideMargin: 0,
+        speed: 400, //ms'
+        auto: true,
+        pause: 7000,
+      });
+    });
+  </script>
+  <script>
+    document.addEventListener('DOMContentLoaded', function() {
+      var chart = window.chart = new EasyPieChart(document.querySelector('.each-graph .db-pofol span'), {
+        easing: 'easeOutElastic',
+        delay: 3000,
+        barColor: '#7c41f5',
+        trackColor: '#cab5f5',
+        scaleColor: false,
+        lineWidth: 10,
+        trackWidth: 8,
+        lineCap: 'butt',
+        onStep: function(from, to, percent) {
+          this.el.children[0].innerHTML = Math.round(percent);
+        }
+      });
+
+      var chart = window.chart = new EasyPieChart(document.querySelector('.each-graph .api-pofol span'), {
+        easing: 'easeOutElastic',
+        delay: 3000,
+        barColor: '#ff9062',
+        trackColor: '#f7ccba',
+        scaleColor: false,
+        lineWidth: 10,
+        trackWidth: 8,
+        lineCap: 'butt',
+        onStep: function(from, to, percent) {
+          this.el.children[0].innerHTML = Math.round(percent);
+        }
+      });
+
+      var chart = window.chart = new EasyPieChart(document.querySelector('.each-graph .renewal-pofol span'), {
+        easing: 'easeOutElastic',
+        delay: 3000,
+        barColor: '#3acbe8',
+        trackColor: '#b6e8f2',
+        scaleColor: false,
+        lineWidth: 10,
+        trackWidth: 8,
+        lineCap: 'butt',
+        onStep: function(from, to, percent) {
+          this.el.children[0].innerHTML = Math.round(percent);
+        }
+      });
+
+      var chart = window.chart = new EasyPieChart(document.querySelector('.each-graph .planning-pofol span'), {
+        easing: 'easeOutElastic',
+        delay: 3000,
+        barColor: '#7c41f5',
+        trackColor: '#cab5f5',
+        scaleColor: false,
+        lineWidth: 10,
+        trackWidth: 8,
+        lineCap: 'butt',
+        onStep: function(from, to, percent) {
+          this.el.children[0].innerHTML = Math.round(percent);
+        }
+      });
+    });
+    </script>
 
 </body>
 </html>
